--- a/src/components/contact-form/contact-form.scss
+++ b/src/components/contact-form/contact-form.scss
@@ -1,5 +1,6 @@
 .contact-form {
   width: 100%;
+  margin: 0 8rem 0 0;
   h2 {
     margin-bottom: 1rem;
   }
@@ -61,6 +62,7 @@
 
 @media only screen and (max-width: 885px) {
   .contact-form {
+    margin: 0 0 8rem 0;
     max-width: 387px;
   }
 }
