--- a/src/pages/invite/invite.scss
+++ b/src/pages/invite/invite.scss
@@ -5,7 +5,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    gap: 8rem;
+    // gap: 8rem;
   }
 }
 
